Bug 163684 - a11y: Orca doesn't announce role for non-editable comboboxes with gtk3 VCL plugin
Summary: a11y: Orca doesn't announce role for non-editable comboboxes with gtk3 VCL pl...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.2.0 target:24.8.4
Keywords: accessibility, bibisected, bisected, regression
Depends on:
Blocks: a11y-Linux
  Show dependency treegraph
 
Reported: 2024-10-30 11:31 UTC by Michael Weghorn
Modified: 2024-11-28 20:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2024-10-30 11:31:50 UTC
I received this bug report by email, and can confirm on Debian testing with a current LO dev version and Orca 47.0-1:

> I found that in the recent LibreOffice 24.8 some comboboxes on Linux stopped
> announcing their roles. This appears to be  due to a fix you made for the
> editable comboboxes in the toolbar. An example is tools menu>heading
> numbering>paragraph style combobox
> 
> commit 9f078ed7b625e86182d64d5ccfbb410cdd38081c
> Author: Michael Weghorn <m.weghorn@posteo.de>
> Date:   Tue May 7 10:04:16 2024 +0200
>    tdf#160971 gtk3 a11y: Set role for custom editable combobox

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 63a93d21d6f0c0312727541978ce0714360b538b
CPU threads: 32; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Michael Weghorn 2024-10-30 11:46:08 UTC
Pending fix:
https://gerrit.libreoffice.org/c/core/+/175823
Comment 2 Commit Notification 2024-10-30 13:25:24 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf627ab2c8c070a620c81cff1faf7b6f04205255

tdf#163684 gtk3 a11y: Don't use combobox role twice for non-editable one

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Weghorn 2024-10-30 13:41:04 UTC
Fixed in master.
Pending backport for 24.8: https://gerrit.libreoffice.org/c/core/+/175842
Comment 4 Commit Notification 2024-11-28 20:56:32 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/8d9bb143730c9866ef40b27d374d7b571b71a8b9

tdf#163684 gtk3 a11y: Don't use combobox role twice for non-editable one

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.